Refactor: unify tests, simplify upstream fetch, add requirements.txt

--- a/.github/workflows/tmp_classroom.yml
+++ b/.github/workflows/tmp_classroom.yml
@@ -1,4 +1,4 @@
-name: Auto-grading (Simplified Upstream Fetch, Unified Tests, No legacy tests/)
+name: Auto-grading (Simplified Upstream Fetch, Tests in .github, Unified)
 
 on:
   push:
